--- a/Pertemuan 6/NugasYukRoom/app/src/main/res/values/strings.xml
+++ b/Pertemuan 6/NugasYukRoom/app/src/main/res/values/strings.xml
@@ -1,13 +1,17 @@
 <resources>
     <string name="app_name">NugasYuk</string>
     <string name="nama_tugas">Nama Tugas</string>
+    <string name="input_nama_tugas">Masukkan Nama Tugas</string>
     <string name="tanggal_pengerjaan">Tanggal Pengerjaan</string>
     <string name="deadline">Deadline</string>
+    <string name="input_tgl">Pilih Tanggal Deadline</string>
     <string name="note">Note</string>
+    <string name="input_note">Masukkan Catatan</string>
     <string name="tambah">Tambah</string>
     <string name="home">Home</string>
     <string name="tambah_tugas">Tambah Tugas</string>
     <string name="riwayat">Riwayat Tugas</string>
+
     <string name="empty_not_saved">Kosong</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
